[gd_scene load_steps=17 format=2]

[ext_resource path="res://Resources/Sprites/interactables/elevator.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interactables/elevator.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/usePrompt.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 30, 30 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.42612, 3.32097 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14.4842, 3.03231 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.167513, 0.451777, 0.812183 )
colors = PoolColorArray( 1, 0.0390625, 0.0390625, 1, 1, 0.554765, 0.00231479, 1, 1, 0.890625, 0, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0727272 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 1.5
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 20.0
gravity = Vector3( 0, 300, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 3.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 10.8613, 0.747137 )

[node name="elevator" type="Node2D"]
script = ExtResource( 2 )

[node name="platform" type="KinematicBody2D" parent="."]
collision_layer = 2
motion/sync_to_physics = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="platform"]
z_index = -2
frames = SubResource( 5 )
animation = "moving"
speed_scale = 30.0

[node name="Button" type="Area2D" parent="platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform/Button"]
position = Vector2( -0.501196, -7.33772 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform"]
position = Vector2( -0.544, 1.004 )
shape = SubResource( 7 )

[node name="Particles2D" type="Particles2D" parent="platform"]
show_behind_parent = true
position = Vector2( -0.5, 7.20337 )
z_index = -5
amount = 10
lifetime = 0.3
preprocess = 200.0
speed_scale = 3.0
randomness = 1.0
local_coords = false
process_material = SubResource( 12 )

[node name="usePrompt" parent="platform" instance=ExtResource( 3 )]
position = Vector2( -0.5, -12.879 )

[node name="DieZone" type="Area2D" parent="platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform/DieZone"]
position = Vector2( -0.445953, 4.45953 )
shape = SubResource( 13 )
disabled = true

[node name="Move" type="Tween" parent="."]
playback_process_mode = 0
[connection signal="body_entered" from="platform/Button" to="." method="_on_Button_body_entered"]
[connection signal="body_exited" from="platform/Button" to="." method="_on_Button_body_exited"]
[connection signal="body_entered" from="platform/DieZone" to="." method="_on_DieZone_body_entered"]
